<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
xmlns:android="http://schemas.android.com/apk/res/android"
tools:context=".view.form.PersonalDataActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/title_personal_data"
        />

    <EditText
        android:id="@+id/edit_card_due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edit_card_due_date"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="number"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/edit_card_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_card_description"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        />

<!--    <EditText-->
<!--        android:id="@+id/edit_email_owner"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="15dp"-->
<!--        android:maxLines="1"-->
<!--        android:inputType="text"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:visibility="gone"-->
<!--        />-->

    <Button
        android:id="@+id/btn_save_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_card"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:layout_margin="20dp"

        />




</LinearLayout>

</androidx.core.widget.NestedScrollView>